# shiboru

./: .gitignore  LICENSE  Makefile  README.md  RELEASING.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CNAME  index.html
packaging/brew/Formula/: shiboru.rb
src/shiboru/: classifier.py  cli.py  constants.py  errors.py  executor.py  main.py  models.py  output_writer.py  reporting.py  scanner.py  tempdirs.py
src/shiboru/optimizers/: base.py  gif.py  ico.py  jpeg.py  png.py  svg.py
src/shiboru/tools/: locator.py  runner.py
src/shiboru/validators/: raster.py  svg.py
tests/integration/: test_formats.py
tests/unit/: test_classifier.py  test_cli.py  test_locator.py  test_output_writer.py  test_scanner.py  test_svg_optimizer.py
